--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~14.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
+    "expo-location": "~19.0.8",
     "expo-router": "~6.0.23",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -29,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-get-random-values": "^2.0.0",
+    "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
